--- a/novo_bd1971_robusto/site/templates/layout.html
+++ b/novo_bd1971_robusto/site/templates/layout.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" href="../static/css/clube.css">
         <link rel="stylesheet" href="../static/css/estatisticas.css">
         <link rel="stylesheet" href="../static/css/search.css">
+        <link rel="stylesheet" href="../static/css/jogo.css">
+        <link rel="stylesheet" href="../static/css/base.css">
+        <link rel="stylesheet" href="../static/css/chaveamento.css">
+        <link rel="stylesheet" href="../static/css/variables.css">
 
         <script>
             window.ALL_CLUBS = {{ clubes_json | safe }};
