--- a/novo_bd1971_robusto/site/templates/search.html
+++ b/novo_bd1971_robusto/site/templates/search.html
@@ -25,8 +25,8 @@
             {% endfor %}
         </select>
 
-        <!-- Dropdown de rodada (apenas para pontos corridos) -->
-        <select id="select-rodada-search" {% if formato_campeonato != 'pontos_corridos' %}style="display: none;"{% endif %}>
+        <!-- Dropdown de rodada  -->
+        <select id="select-rodada-search">
             <option value="">Selecione a Rodada</option>
         </select>
 
